# vllm-i64

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ablation_results.json  eval_ablations.py  pyproject.toml  requirements.txt  test_kv_cache_correctness.py
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmarks/: bench_comparative.py  bench_e2e.py  bench_engine.py  bench_i64_routing.py
csrc/: I64_binding.cu  I64_gemm.cu  I64_quantize.cu  I64_rmsnorm.cu  I64_rope.cu  I64_softmax.cu  i64_expert_dispatch.cu  i64_ops_binding.cu  i64_router.cu
tests/: test_api_server.py  test_async_engine.py  test_competitive_features.py  test_dense_models.py  test_engine_config.py  test_features_v2.py  test_features_v3.py  test_flash_attention.py  test_i64_pipeline.py  test_integration.py  test_loader.py  test_lora.py  test_model.py  test_new_features.py  test_performance_features.py  test_safetensors_loader.py  test_sampling.py  test_sandbox.py  test_scheduler.py  test_tensor_parallel.py  test_utils.py
vllm_i64/: __init__.py  cli.py  registry.py
vllm_i64/agentics/: __init__.py  agent.py  client.py  orchestrator.py  tools.py
vllm_i64/api/: __init__.py  _admin.py  _agent.py  _completions.py  _helpers.py  _rag.py  events.py  middleware.py  server.py  tracking.py  types.py
vllm_i64/core/: __init__.py  awq_gptq.py  block_pool.py  chat_template.py  compile.py  cuda_graph.py  fp8.py  kv_cache.py  loader.py  logging.py  logits_processor.py  metrics.py  quantization.py  registry.py  sampling.py  speculative.py  tokenizer.py  tool_parser.py
vllm_i64/cpu/: __init__.py  engine.py
vllm_i64/engine/: __init__.py  config.py  i64_engine.py  i64_scheduler.py  sampler.py
vllm_i64/kernels/: __init__.py  fused_experts.py  i64_ops.py  kernel_loader.py  triton_fused_expert.py
vllm_i64/kernels/cuda/: I64_loader.py  __init__.py
vllm_i64/kernels/triton/: I64_fused_dequant_gemm.py  I64_fused_rmsnorm_quant.py  I64_fused_rope.py  I64_fused_silu_mul.py  I64_fused_softmax.py  I64_int8_gemm.py  __init__.py
vllm_i64/layers/: __init__.py  attention.py  dense_mlp.py  integer_activations.py  lora.py  moe.py  rmsnorm.py  rotary.py  token_routed_mlp.py  vision.py
vllm_i64/models/: __init__.py  model_registry.py  token_routed_model.py
vllm_i64/models/complexity_deep/: __init__.py  config.py  model.py
vllm_i64/models/complexity_i64/: __init__.py  config.py
vllm_i64/models/llama/: config.py  model.py
vllm_i64/models/llava/: __init__.py  config.py  model.py
vllm_i64/models/mistral/: config.py  model.py
vllm_i64/models/mixtral/: config.py  model.py
vllm_i64/models/qwen2/: config.py  model.py
vllm_i64/parallel/: __init__.py  disaggregated.py  launcher.py  pipeline_parallel.py  pp_utils.py  tensor_parallel.py  worker.py
vllm_i64/rag/: __init__.py  chunker.py  embedder.py  index.py  retriever.py
vllm_i64/sandbox/: __init__.py  executor.py
vllm_i64/search/: __init__.py  history.py  web_search.py
